<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@drawable/tazzine"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="510dp"
        android:layout_marginLeft="80dp"
        android:layout_marginRight="80dp"
        android:weightSum="2" >

        <Button
            android:id="@+id/yes"
            android:background="@drawable/buttonshape_3a1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/yes"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/no"
            android:background="@drawable/buttonshape_3a1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/no"
            android:textColor="#FFFFFF" />


    </LinearLayout>

    <TextView
        android:id="@+id/euro_price"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/price"
        android:layout_marginBottom="200dp"
        android:textStyle="bold"
        android:textColor="#5c2e00"
        android:textSize="70dp"
        />



    <TextView
        android:id="@+id/buy_prod"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="0dp"
        android:gravity="center"
        android:text="@string/buy_products"
        android:textColor="#5c2e00"
        android:textSize="50dp"
        android:textStyle="bold" />

</RelativeLayout>