<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical"
android:background="@drawable/tazzine">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.4"
            android:orientation="vertical" >
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.4"
            android:orientation="vertical" >
        </LinearLayout>

    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.6"
        android:orientation="horizontal" >
    </LinearLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_marginTop="-10dp"
        android:layout_weight="2">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:gravity="center_horizontal"
            android:text="@string/year_w2p"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginBottom="-10dp"
            android:textColor="#ffffff"
            android:textStyle="bold"
            android:textSize="25dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:gravity="center_horizontal"
            android:textColor="#ffffff"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:text="@string/version"
            android:textSize="16dp" />

    </RelativeLayout>



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.7"
        android:orientation="horizontal" >
        <ImageView
            android:layout_marginLeft="150dp"
            android:id="@+id/vending_machine"
            android:layout_gravity="center"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:scaleX="0.6"
            android:scaleY="0.65"
            android:textColor="#FFFFFF"
            android:background="@drawable/logo_quadrato"
            android:shadowColor="#171717"
            android:layout_marginBottom="80dp"
            android:layout_marginTop="-10dp"
            android:shadowRadius="5"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="45dp"
            android:layout_marginRight="45dp"
            android:layout_marginTop="90dp"
            android:textSize="15dp"
            android:layout_centerHorizontal="true"
            android:gravity="center_horizontal"
            android:text="@string/Developers"
            android:textColor="#ffffff">
        </TextView>

    </RelativeLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.4"
        android:orientation="horizontal">
    </LinearLayout>



</LinearLayout>

